2024-03-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improve parsing of text arguments - fix quotation mark replaced by feet or inches and % replaced by percent variable, remove quotation marks when parts of argument are quoted separately (a "b" "c" = "a b c"), and do not replace quoted curly brackets in expression unless necessary
	* Do not use sexagesimal output format for very large numbers (when scientific notation is necessary for integer part) and reduce maximal number of decimals (for last position when previous positions is non-zero)
	* Handle case when initial guess results in division by zero, and avoid unnecessary error messages, in newtonsolve()

2024-02-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix BTC exchange rate from coinbase, if available from other source, not used before restart after exchange rates update, and do not mark BTC as hidden (places the unit in submenu in GUIs)

2024-02-20 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support "where" statements, without "where", before main expression, e.g. "a=2, b=3; a^b"

2024-02-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Change handling of "where" expression (create temporary variables) to allow previously undefined variable names and to avoid confusing output of parsed expression (e.g. redefined "c" was displayed as SpeedOfLight)

2024-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Detect spelling errors in qalc options (when using set command)

2024-02-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Change handling a vectors in multiple function arguments (of non-vector type) - return vector instead of matrix, require equal number of elements, and use the same vector index for all argument for each function instance (e.g. atan2([1  2], [3  4]) = [atan2(1, 3)  atan(2 4)]
	* Set handle vector property by default, for text, date, and boolean arguments, and for arguments, in global non-builtin functions, without specified type