@@ -617,6 +617,8 @@ bool Calculator::plotVectors(PlotParameters *param, const vector<MathStructure> 
 			ComparisonResult ct1 = COMPARISON_RESULT_EQUAL, ct2 = COMPARISON_RESULT_EQUAL;
 			size_t last_index = string::npos, last_index2 = string::npos;
 			bool check_continuous = pdps[serie]->test_continuous && (pdps[serie]->style == PLOT_STYLE_LINES || pdps[serie]->style == PLOT_STYLE_POINTS_LINES);
+			size_t discontinuous_count = 0, point_count = 0;
+			bool discontinuous_start = false, discontinuous_end = false;
 			bool prev_failed = false;
 			const MathStructure *yprev = NULL;
 			for(size_t i = 1; (i_pre % 2 == 0 && i <= y_vectors[serie].countChildren()) || (i_pre % 2 == 1 && i <= yim_vectors[serie].countChildren()); i++) {
@@ -670,6 +672,7 @@ bool Calculator::plotVectors(PlotParameters *param, const vector<MathStructure> 
 						if(b_imagzero_x) plot_data += x_vectors[serie].getChild(i)->number().realPart().print(po);
 						else plot_data += x_vectors[serie].getChild(i)->print(po);
 						plot_data += " ";
+						point_count++;
 					}
 				}
 				if(!invalid_nr) {
@@ -679,7 +682,21 @@ bool Calculator::plotVectors(PlotParameters *param, const vector<MathStructure> 
 						if((ct == COMPARISON_RESULT_GREATER || ct == COMPARISON_RESULT_LESS) && (ct1 == COMPARISON_RESULT_GREATER || ct1 == COMPARISON_RESULT_LESS) && (ct2 == COMPARISON_RESULT_GREATER || ct2 == COMPARISON_RESULT_LESS) && ct1 != ct2 && ct != ct2) {
 							if(last_index2 != string::npos) {
 								plot_data.insert(last_index2 + 1, "  \n");
+								discontinuous_count++;
 								last_index += 3;
+								if(i == 4) {
+									discontinuous_start = true;
+								} else if(i == 5 && discontinuous_start && plot_data.find("\n") != plot_data.find("\n  \n")) {
+									size_t i_firstrow = plot_data.find("\n");
+									plot_data.insert(i_firstrow, "\n  ");
+									last_index += 3;
+								}
+								if((i_pre % 2 == 0 && i == y_vectors[serie].countChildren() - 1) || (i_pre % 2 == 1 && i == yim_vectors[serie].countChildren() - 1)) {
+									discontinuous_end = true;
+								} else if(discontinuous_end && ((i_pre % 2 == 0 && i == y_vectors[serie].countChildren()) || (i_pre % 2 == 1 && i == yim_vectors[serie].countChildren()))) {
+									size_t i_lastrow = plot_data.rfind("\n");
+									plot_data.insert(i_lastrow, "\n  ");
+								}
 							}
 						}
 					}
@@ -690,6 +707,7 @@ bool Calculator::plotVectors(PlotParameters *param, const vector<MathStructure> 
 				} else if(!prev_failed) {
 					ct = COMPARISON_RESULT_UNKNOWN;
 					plot_data += "  \n";
+					discontinuous_count++;
 					prev_failed = true;
 				}
 				if(yprev == &m) {
@@ -715,6 +733,10 @@ bool Calculator::plotVectors(PlotParameters *param, const vector<MathStructure> 
 				}
 			}
 			if(msecs > 0) stopControl();
+			if(check_continuous && pdps[serie]->style == PLOT_STYLE_LINES && discontinuous_count > point_count / 2) {
+				if((i_pre % 2 == 0 && y_vectors[serie].countChildren() > 100) || (i_pre % 2 == 1 && yim_vectors[serie].countChildren() > 100)) gsub(" with lines", " with dots", plot);
+				else gsub(" with lines", " with points", plot);
+			}
 #ifdef HAVE_GNUPLOT_CALL
 			fputs(plot_data.c_str(), fdata);
 			fflush(fdata);
